2005-09-11  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (to_s): 'replace_auto_link'
	after 'replace_link'.
	(replace_auto_link): correct links.

	* misc/plugin/rss.rb (rss): disable @conf.use_plugin in making
	full-text HTML contents (reported by MORIOKA Toru
	[Hiki-dev:01029]).

	* hiki/hiki_formatter.rb (apply_tdiary_theme, tdiary_section):
	move from style/default/html_formatter.rb.

	* hiki/repos/svn.rb (commit, delete): add the '--force-log' option
	to avoid an error in editing a page whose name and the editor is
	the same (by ISOBE, Kazuhiko [Hiki-dev:01027]).

2005-09-09  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_inline): add
	'class="external"' to uri liks (hikidoc:18).

2005-09-08  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.db, style/default/html_formatter.rb: use
	the HikiDoc library.

2005-09-06  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/ja/rss.rb: support whole HTML output (instead of
	title-only).

2005-09-05  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/rss.rb (rss_body),
	misc/plugin/ja/rss.rb (label_rss_mode_candidate): RSS which lists
	only titles of updated pages is supported (report by vette).

	* misc/plugin/footnote.rb (render): support a block element
	argument (patch by U.Nakamura).

2005-09-03  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/sitemap.rb: code cleanup (report by Atsushi Koga).

2005-09-01  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (make_link): support anchors in
	bracket links.

	* misc/plugin/orphan.rb (orphan_pages): code cleanup (reported by
	ISOBE, Kazuhiko).

2005-08-30  Kouhei Yanagita <yanagi@shakenbu.org>
	* misc/plugin/rss.rb (rss): deal with the If-Modified-Since header
	in a request.

2005-08-29  Kouhei Yanagita <yanagi@shakenbu.org>
	* test/test_hikifarm.rb (test_create_wiki): the test failed
	because one of the arguments of Hikifarm#create_wiki is lack.
